--- a/views/login/login.html
+++ b/views/login/login.html
@@ -12,13 +12,13 @@
     <title>商品管理系统</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
 
     
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!-- <script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
 
    
   </head>
@@ -30,7 +30,7 @@
       <form class="form-signin" id="form1" action="/login" method="post">
         <h2 class="form-signin-heading">请先登录...</h2>
         <label for="inputEmail" class="sr-only">登录名或邮箱</label>
-        <input type="email" id="uname" name="uname" class="form-control" placeholder="Email address" required autofocus>
+        <input type="text" id="uname" name="uname" class="form-control" placeholder="text" required autofocus>
         <label for="inputPassword" class="sr-only">密码</label>
         <input type="password" id="psw" name="psw" class="form-control" placeholder="Password" required>
         <div class="checkbox">
@@ -38,7 +38,7 @@
             <input type="checkbox" value="remember-me"> 记住密码
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">登   录</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
       </form>
 
     </div> <!-- /container -->
