--- a/views/main/index.html
+++ b/views/main/index.html
@@ -24,7 +24,7 @@
                              { "menuname": "收费查询", "icon": "icon-add", "url": "demo.html" }
                      ]
                  }, {
-                     "menuid": "2", "icon": "icon-13", "menuname": "综合检测", "selected": true,
+                     "menuid": "2", "icon": "icon-13", "menuname": "综合检测", "selected": false,
                      "menus": [{ "menuname": "车辆登录", "icon": "icon-nav", "url": "/maint/regcheck" },
                              { "menuname": "上线检测", "icon": "icon-add", "url": "demo.html" },
                              { "menuname": "车辆复检", "icon": "icon-users", "url": "demo2.html" },
@@ -51,7 +51,7 @@
                              { "menuname": "用户管理", "icon": "icon-users", "url": "/main/user_list" },
                              { "menuname": "角色管理", "icon": "icon-role", "url": "/main/role_list" },
                              { "menuname": "检验机构", "icon": "icon-set", "url": "/main/jyjg_list" },
-                             { "menuname": "系统日志", "icon": "icon-log", "url": "demo.html" }
+                             { "menuname": "密码修改", "icon": "icon-log", "url":"/login/uppwd" }
                      ]
                  }
             ]
@@ -75,7 +75,7 @@
         background:  #7f99be repeat-x center 50%;
         line-height: 60px;color: #fff; font-family: Verdana, 微软雅黑,黑体">
 
-        <span style="float:right; padding-right:20px;" class="head">欢迎回来 {{.nick}} <a href="#" id="editpass">修改密码</a> <a href="#" id="loginOut">安全退出</a></span>
+        <span style="float:right; padding-right:20px;" class="head">欢迎回来 {{.nick}} <a href="/login/uppwd" id="editpass">修改密码</a> <a href="#" id="loginOut">安全退出</a></span>
         <span style="padding-left:10px; font-size: 16px; "><img src="/images/logo.png" width="40" height="40" align="absmiddle" />商品管理系统</span>
 
 
@@ -83,7 +83,7 @@
     </div>
     <div data-options="region:'west',split:true,title:'功能菜单',collapsible:false" style="width:190px;">
         <div class="easyui-accordion" fit="true" border="false">
-        <ul id="tree"></ul>
+        <!-- <ul id="tree"></ul> -->
 
         </div>
 
